# azalea

./: .gitignore  Cargo.toml  Dockerfile.ci  README.md  build.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml
src/: index.html  main.rs
